remise en place de l'icône chart en mode tablette

--- a/css/style.css
+++ b/css/style.css
@@ -530,6 +530,10 @@ footer {
   .all-article-container a {
     width: 40%;
   }
+
+  .populaire-container .chart {
+    margin-right: 1rem;
+  }
 }
 
 /* MODEL TELEPHONE */
